2000-07-31  Not Zed  <NotZed@HelixCode.com>

	* mail-vfolder.h: Header for vfolder functions.

	* folder-browser.c (mail_uri_to_folder): Use new scheme to open
	vfolders.
	(search_save): New button/function to save a search as a vfolder.

	* mail-vfolder.c (vfolder_edit): Made asynchronous.
	(vfolder_uri_to_folder): New function for loading vfolders and
	setting up their source folders.
	(vfolder_refresh): Change shell vfolder uri's to indirect
	references rather than the real vfolder uri.
	(vfolder_gui_add_rule): Add a rule with user confirmation.
	(vfolder_create_part): Get a new part by name, for creating rules
	in code.

	* message-thread.c (thread_messages): Check for uid lookup
	failure, which indicates an error in the folder or calling code.

2000-07-29  Not Zed  <NotZed@HelixCode.com>

	* component-factory.c (create_view): Remove hack to pass the
	storage around.

	* folder-browser-factory.c (control_activate): Changed to call
	renamed vfolder editor.

	* mail-ops.c (vfolder_edit_vfolders): renamed from vfolder_edit,
	call new edit function.
	(vfolder_editor_clicked): Removed.
	(filter_druid_clicked):
	(filter_edit): Updated for api change.
	(real_fetch_mail): Fixed up for api change and fucked up indent.
	(filter_get_folder): callback for filter driver.

	* mail-vfolder.c: New file to manage virtual folders.

2000-07-29  JP Rosevear  <jpr@helixcode.com>

	* mail-format.c (mail_generate_reply): Use new mail config stuff

	* component-factory.c (create_imap_storage): Use new mail config
	stuff
	(create_news_storage): ditto

	* evolution-mail.schemas: Gconf schema for evolution mail

	* mail-config-druid.glade: Gladification of config druid

	* mail-config.h: New header with config structs.

	* mail-config.c: Rewrite of GUI configuration tools to use 
	new config structs.  Stores multiple identities and sources now.
	Still only uses the first one found.
	(mail_config_fetch): Returns MailConfig struct to caller
	for configuration queries.