@@ -1,3 +1,9 @@
+2000-08-01  Peter Williams  <peterw@helixcode.com>
+
+	* mail-threads.c: Implement Solaris threads. Attempt
+	to join to the thread upon exit -- hopefully prevents
+	all those nasty zombie processes from popping up :-(
+
 2000-07-31  Not Zed  <NotZed@HelixCode.com>
 
 	* mail-vfolder.h: Header for vfolder functions.
